# WerthmanCafieroPeters

./: .env  .gitignore  404.html  CCD.html  README.md  dbt_project.yml  index.html  main.py  melted_commodity_prices.csv  merged_prices.csv  mkdocs.yml  pyproject.toml  python_to_postgres.py  search.html  sitemap.xml
.devcontainer/: devcontainer.json
docs/: index.md
main/: .env  create_table.py  mkdocs.yml  postgres.py
main/docs/: about.md  index.md
main/my_project/: .user.yml  dbt_project.yml  profile.yml  profiles.yml
main/my_project/models/: 5YCotton.sql  5YWheat.sql  5Ycorrelation.sql  5yearmodel.sql  AverageCottonvsWheatCorr.sql  model1.sql  models.yml  test_AverageCottonvsWheatCorr.yml  test_corn.yml
main/site/: 404.html  index.html  search.html  sitemap.xml
main/site/search/: search_index.json
models/: CottonvsWheat.sql  models.yml
project/: pyvenv.cfg
project/Scripts/: activate  activate.bat
search/: search_index.json
tests/: test_commodities.yml
